--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="./assets/word.js"></script>
 	<script src="./assets/content.js"></script>
 	<script src="./assets/script.js"></script>
-	<script src="./assets/main.js"></script>
+	<script src="./assets/main.js?v1.1"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 	<title>サーモンラン配信サムネイルメーカー</title>
 	<meta name="twitter:card"        content="summary" />
