--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="./assets/extend.js"></script>
 	<script src="./assets/word.js"></script>
 	<script src="./assets/content.js"></script>
-	<script src="./assets/script.js"></script>
+	<script src="./assets/script.js?v1.1"></script>
 	<script src="./assets/main.js?v1.1"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 	<title>サーモンラン配信サムネイルメーカー</title>
