--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div class="download-button" onclick="download(1920,  080, 'jpg')">1920x1080 (jpg)</div>
 	<div class="download-button" onclick="download(1280,  720, 'jpg')">1280x720 (jpg)</div>
 </div>
-<p style="font-family: Splatoon2; position: fixed; left: 200%;">Splatoon2</p>
-<p style="font-family: Splatoon1; position: fixed; left: 200%;">Splatoon1</p>
+<p style="font-family: Splatoon2; position: fixed; left: 200%;">Splatoon2 あいう フレンド 野良 乱獲 </p>
+<p style="font-family: Splatoon1; position: fixed; left: 200%;">Splatoon1 あいう フレンド 野良 乱獲 </p>
 </body>
 </html>
