--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>サーモンラン配信サムネイルメーカー</title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-type" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-	<script src="./assets/html2canvas.min.js"></script>
 	<script src="./assets/jquery-3.5.1.min.js"></script>
-	<script src="./assets/extend.js"></script>
-	<script src="./assets/word.js"></script>
-	<script src="./assets/content.js"></script>
-	<script src="./assets/script.js?v1.1"></script>
-	<script src="./assets/main.js?v1.1"></script>
-	<link rel="stylesheet" href="./assets/style.css">
-	<title>サーモンラン配信サムネイルメーカー</title>
+	<script src="./assets/webfont.js"></script>
+	<script  src="./assets/extend.js?v1.2"></script>
+	<script    src="./assets/word.js?v1.2"></script>
+	<script src="./assets/content.js?v1.2"></script>
+	<script  src="./assets/script.js?v1.2"></script>
+	<script    src="./assets/main.js?v1.2"></script>
+	<link   href="./assets/style.css?v1.2" rel="stylesheet">
 	<meta name="twitter:card"        content="summary" />
 	<meta name="twitter:site"        content="@GungeeSpla" />
 	<meta name="twitter:title"       content="サーモンラン配信サムネイルメーカー" />
@@ -20,6 +20,8 @@
 	<link rel="icon" type="image/png" href="./assets/img/twitter-card.png">
 </head>
 <body>
+<h1>サーモンラン配信サムネイルメーカー</h1>
+<h2>スケジュールの選択</h2>
 <div id="rotation-wrapper">
 	<div style="display: inline-block;">
 		<div id="left-triangle" class="left-triangle"></div>
@@ -29,10 +31,12 @@
 		<div id="right-triangle" class="right-triangle"></div>
 	</div>
 </div>
+<h2>テンプレートの選択</h2>
 <div id="thumb-wrapper">
 </div>
+<h2>スクリプトの編集</h2>
 <div id="script-wrapper">
-	<div class="script-title">スクリプト（編集内容は自動で保存されます）<div id="set-default-script">デフォルトに戻す</div></div>
+	<div class="script-title"><div id="set-default-script">デフォルトに戻す</div></div>
 	<div id="script-area">
 		<div id="script" contenteditable="true"></div>
 	</div>
@@ -54,13 +58,154 @@
 		<div id="background-color-toggle">背景色を変更</div>
 	</div>
 </div>
+<h2>ダウンロード</h2>
 <div id="download-area">
 	<div class="download-button" onclick="download(1920, 1080, 'png')">1920x1080 (png)</div>
 	<div class="download-button" onclick="download(1280,  720, 'png')">1280x720 (png)</div>
 	<div class="download-button" onclick="download(1920,  080, 'jpg')">1920x1080 (jpg)</div>
 	<div class="download-button" onclick="download(1280,  720, 'jpg')">1280x720 (jpg)</div>
 </div>
-<p style="font-family: Splatoon2; position: fixed; left: 200%;">Splatoon2 あいう フレンド 野良 乱獲 </p>
-<p style="font-family: Splatoon1; position: fixed; left: 200%;">Splatoon1 あいう フレンド 野良 乱獲 </p>
+<h2>スクリプトについて</h2>
+<div class="text-block">
+	<ol>
+		<li>スクリプトは自由に編集できます。また、編集内容は自動で保存されます。</li>
+		<li>スクリプトは基本的に半角英数で入力してください。タグ・パラメータ・スペース・イコール・クォーテーションなどが全角で入力されている場合、正常に動作しません。</li>
+		<li>スクリプトの各行は次のような構造になっています。<br><span class="hl-tag-name">タグ名</span> <span class="hl-param-name">パラメータの名前1</span>="<span class="hl-param-value">値1</span>" <span class="hl-param-name">パラメータの名前2</span>="<span class="hl-param-value">値2</span>"</li>
+		<li>まず要素の種類を決める「タグ」を書き、その後ろに「名前="値"」で一組になった「パラメータ」を書いていきます。タグとパラメータの間、パラメータとパラメータの間には半角スペースを入れてください。</li>
+	</ol>
+</div>
+<h2>タグとパラメータについて</h2>
+<div class="text-block normal-param">
+	<h3>rect</h3>
+	<p>四角形を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名 | 初期値 | 説明
+	x            | 0      | 四角形の左上のx座標をpx単位で指定します。ゼロだと画面の左端に描画されます。数を増やすと右に移動します。
+	y            | 0      | 四角形の左上のy座標をpx単位で指定します。ゼロだと画面の上端に描画されます。数を増やすと下に移動します。
+	width        | 500    | 四角形の横幅をpx単位で指定します。
+	height       | 500    | 四角形の高さをpx単位で指定します。
+	radius       | 0      | 角に丸みを付けたい場合、丸みの半径をpx単位で指定します。
+	color        | black  | 四角形の塗りつぶしの色を指定します。形式は「white」「#ffffff」「rgb(255, 255, 255)」「rgba(255, 255, 255, 1)」など。「none」で透明になります。色の指定に使用可能な形式について、詳しくは&lt;a href="https://gray-code.com/html_css/about-color-specify-of-css/" target="_blank">こちら&lt;/a>を見てください。
+	stroke_color | none   | 四角形の線の色を指定します。
+	stroke_width | 2      | 四角形の枠線の太さをpx単位で指定します。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>circle</h3>
+	<p>真円を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名 | 初期値 | 説明
+	x            | 0      | 円の左上のx座標をpx単位で指定します。ゼロだと画面の左端に描画されます。数を増やすと右に移動します。
+	y            | 0      | 円の左上のy座標をpx単位で指定します。ゼロだと画面の上端に描画されます。数を増やすと下に移動します。
+	width        | 500    | 四角形の直径をpx単位で指定します。
+	color        | black  | 四角形の塗りつぶしの色を指定します。形式は「white」「#ffffff」「rgb(255, 255, 255)」「rgba(255, 255, 255, 1)」など。「none」で透明になります。
+	stroke_color | none   | 四角形の線の色を指定します。
+	stroke_width | 2      | 四角形の枠線の太さをpx単位で指定します。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>dotted_line</h3>
+	<p>水平方向の点線を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名 | 初期値 | 説明
+	x            | 0      | 円の左上のx座標をpx単位で指定します。ゼロだと画面の左端に描画されます。数を増やすと右に移動します。
+	y            | 0      | 円の左上のy座標をpx単位で指定します。ゼロだと画面の上端に描画されます。数を増やすと下に移動します。
+	width        | 1000   | 線全体(四角形)の横幅をpx単位で指定します。
+	height       | 20     | 線全体(四角形)の高さをpx単位で指定します。
+	a            | 40     | 点ひとつの横幅円の横幅をpx単位で指定します。
+	b            | 20     | 点と点の間隔をpx単位で指定します。
+	color        | black  | 線の色を指定します。形式は「white」「#ffffff」「rgb(255, 255, 255)」「rgba(255, 255, 255, 1)」など。「none」で透明になります。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>text</h3>
+	<p>文字を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名  | 初期値     | 説明
+	x             | 0          | テキストのx座標(基準点は左上とは限らない)をpx単位で指定します。
+	y             | 0          | テキストのy座標(基準点は左上とは限らない)をpx単位で指定します。
+	text          | text       | テキストを指定します。
+	align         | start      | テキストの横方向の基準点をキーワードで指定します。「start」「end」「center」でそれぞれ「左寄せ」「右寄せ」「中央寄せ」を指定できます。
+	baseline      | alphabetic | テキストの縦方向の基準点をキーワードで指定します。「top」「middle」「alphabetic」「bottom」でそれぞれ「上端」「中央」「アルファベットのベースライン」「下端」を指定できます。詳しくは&lt;a href="http://www.htmq.com/canvas/textBaseline.shtml" target="_blank">こちら&lt;/a>を見てください。
+	size          | 200        | 文字サイズをpx単位で指定します。
+	family        | Splatoon1  | フォントを指定します。「Splatoon1」「Splatoon2」の他、「sans-serif」でゴシック体、「serif」で明朝体を指定できます。PCにインストールされているフォント名を指定することもできます。使用可能なフォントは&lt;a href="https://wordmark.it/" target="_blank">Wordmark.it&lt;/a>で調べることができます。
+	color         | black      | 線の色を指定します。形式は「white」「#ffffff」「rgb(255, 255, 255)」「rgba(255, 255, 255, 1)」など。「none」で透明になります。
+	stroke_color  | none       | 縁取り線の色を指定します。
+	stroke_width  | 20         | 縁取り線の太さをpx単位で指定します。
+	shadow_color  | none       | シャドーの色を指定します。
+	shadow_x      | 0          | シャドーのx座標をpx単位で指定します。
+	shadow_y      | 0          | シャドーのy座標をpx単位で指定します。
+	shadow_blur   | 5          | シャドーの広がりをpx単位で指定します。
+	shadow_strong | 5          | シャドーの濃さを指定します。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>image</h3>
+	<p>画像を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名  | 初期値   | 説明
+	x             | 0        | 画像のx座標をpx単位で指定します。
+	y             | 0        | 画像のy座標をpx単位で指定します。
+	src           | 右で説明 | 画像のURLを指定します。省略すると「./assets/img/stage/1280x720/1.png」が読み込まれます。
+	width         |          | 画像の横幅をpx単位で指定します。横幅だけを指定すると、高さは元画像の縦横比に従って自動で決定されます。横幅も高さも省略すると、元画像と同サイズになります。
+	height        |          | 画像の高さをpx単位で指定します。
+	radius        | 0        | 角に丸みを付けたい場合、丸みの半径をpx単位で指定します。
+	clip          |          | 画像を別の透過画像でクリッピングすることができます。クリッピング用の画像のURLを指定します。
+	tile_width    | 0        | これを指定すると、width/heightで指定した四角形内に、画像をタイル状に敷き詰めることができます。そのタイルの横幅を指定します。
+	tile_height   | 0        | タイルの高さを指定します。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>stage</h3>
+	<p>ステージの画像を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名  | 初期値   | 説明
+	x             | 0        | 画像のx座標をpx単位で指定します。
+	y             | 0        | 画像のy座標をpx単位で指定します。
+	type          | 1        | ステージの画像タイプを「1」か「2」のどちらかで指定します。「1」はイカリングなどで見られるステージ画像、「2」はバイト開始時のイントロで流れるステージ画像です。
+	width         | 1920     | 画像の横幅をpx単位で指定します。高さは自動で決定されます。
+	radius        | 0        | 角に丸みを付けたい場合、丸みの半径をpx単位で指定します。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>weapon_list</h3>
+	<p>ブキ4個を並べた画像を描くタグです。</p>
+	<p class="parse-table">
+	パラメータ名  | 初期値   | 説明
+	x             | 0        | 画像のx座標をpx単位で指定します。
+	y             | 0        | 画像のy座標をpx単位で指定します。
+	width         | 300      | 各ブキの画像の横幅をpx単位で指定します。
+	margin        | 50       | 各ブキの画像の間隔をpx単位で指定します。
+	</p>
+</div>
+<div class="text-block normal-param">
+	<h3>set_date_format</h3>
+	<p>これは何かを描くタグではありません。「スケジュールの始まる時間や終わる時間をテキストで表示する際のフォーマットを指定する」という特殊なタグです。</p>
+	<p class="parse-table">
+	パラメータ名  | 初期値    | 説明
+	start         | M/d HH:mm | スケジュールの始まる時間のフォーマットを指定します。たとえば「y.M.d (D) HH:mm」と指定すると、「2020.9.25 (金) 03:00」のような表記になります。
+	end           | M/d HH:mm | スケジュールの終わる時間のフォーマットを指定します。
+	</p>
+</div>
+<h2>特殊なパラメータの値</h2>
+<div class="text-block special-param">
+	<p>パラメータの値として「スケジュールごとに固有の情報」に置換される特殊な文字を使うことができます。たとえばパラメータの値に{stage_ja}を指定すると、その部分はスケジュールのステージ名に置き換えられます。</p>
+	<p class="parse-table">
+	特殊な値         | 置換
+	{stage_id}       | ステージのID（1～5）。
+	{stage_ja}       | ステージの日本語の正式名称。
+	{stage_ja_short} | ステージの日本語の略称。
+	{w1}             | ブキ1のID。
+	{w2}             | ブキ2のID。
+	{w3}             | ブキ3のID。
+	{w4}             | ブキ4のID。
+	{w1_ja}          | ブキ1の日本語の正式名称。
+	{w2_ja}          | ブキ2の日本語の正式名称。
+	{w3_ja}          | ブキ3の日本語の正式名称。
+	{w4_ja}          | ブキ4の日本語の正式名称。
+	{start}          | スケジュールの始まる時間。
+	{end}            | スケジュールの終わる時間。
+	</p>
+</div>
 </body>
 </html>
