--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<script src="./assets/jquery-3.5.1.min.js"></script>
 	<script src="./assets/webfont.js"></script>
-	<script  src="./assets/extend.js?v1.2"></script>
-	<script    src="./assets/word.js?v1.2"></script>
-	<script src="./assets/content.js?v1.2"></script>
-	<script  src="./assets/script.js?v1.2"></script>
-	<script    src="./assets/main.js?v1.2"></script>
-	<link   href="./assets/style.css?v1.2" rel="stylesheet">
+	<script  src="./assets/extend.js?v1.3"></script>
+	<script    src="./assets/word.js?v1.3"></script>
+	<script src="./assets/content.js?v1.3"></script>
+	<script  src="./assets/script.js?v1.3"></script>
+	<script    src="./assets/main.js?v1.3"></script>
+	<link   href="./assets/style.css?v1.3" rel="stylesheet">
 	<meta name="twitter:card"        content="summary" />
 	<meta name="twitter:site"        content="@GungeeSpla" />
 	<meta name="twitter:title"       content="サーモンラン配信サムネイルメーカー" />
@@ -43,7 +43,7 @@
 </div>
 <div id="canvas-wrapper">
 	<div id="main-canvas-area" class="canvas-area">
-		<canvas id="main-canvas" width="800" height="450"></canvas>
+		<canvas id="main-canvas" width="1920" height="1080"></canvas>
 	</div>
 	<div class="right-block">
 		<div id="sub-canvas-area-1" class="canvas-area">
@@ -64,6 +64,9 @@
 	<div class="download-button" onclick="download(1280,  720, 'png')">1280x720 (png)</div>
 	<div class="download-button" onclick="download(1920,  080, 'jpg')">1920x1080 (jpg)</div>
 	<div class="download-button" onclick="download(1280,  720, 'jpg')">1280x720 (jpg)</div>
+</div>
+<div class="text-block normal-param">
+	<p class="caution">外部サイトの画像を使用している場合、上のボタンからはダウンロードできません（ブラウザのセキュリティの仕様上の問題）。その場合は、大きなプレビュー画像を右クリックして「名前を付けて画像を保存」から保存してみてください。</p>
 </div>
 <h2>スクリプトについて</h2>
 <div class="text-block">
