--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>サーモンラン配信サムネイルメーカー</title>
+	<title>サーモンラン配信サムネイルメーカー v1.3</title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-type" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<script src="./assets/jquery-3.5.1.min.js"></script>
