--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>サーモンラン配信サムネイルメーカー v1.3</title>
+	<title>サーモンラン配信サムネイルメーカー</title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-type" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 	<script src="./assets/jquery-3.5.1.min.js"></script>
@@ -20,7 +20,7 @@
 	<link rel="icon" type="image/png" href="./assets/img/twitter-card.png">
 </head>
 <body>
-<h1>サーモンラン配信サムネイルメーカー</h1>
+<h1>サーモンラン配信サムネイルメーカー v1.3</h1>
 <h2>スケジュールの選択</h2>
 <div id="rotation-wrapper">
 	<div style="display: inline-block;">
