--- a/index.html
+++ b/index.html
@@ -210,7 +210,11 @@
 <div class="text-block special-param">
 	<p>パラメータの値として「スケジュールごとに固有の情報」に置換される特殊な文字を使うことができます。たとえばパラメータの値に{stage_ja}を指定すると、その部分はスケジュールのステージ名に置き換えられます。</p>
 	<p class="parse-table">
-	特殊な値         | 置換
+	置換元           | 置換先
+	{num}            | スケジュールが第何回か。
+	{start_date}     | スケジュールの始まる時間。
+	{end_date}       | スケジュールの終わる時間。
+	{dutation}       | スケジュールが何時間開催されているか。
 	{stage_id}       | ステージのID（1～5）。
 	{stage_ja}       | ステージの日本語の正式名称。
 	{stage_ja_short} | ステージの日本語の略称。
@@ -222,8 +226,6 @@
 	{w2_ja}          | ブキ2の日本語の正式名称。
 	{w3_ja}          | ブキ3の日本語の正式名称。
 	{w4_ja}          | ブキ4の日本語の正式名称。
-	{start_date}     | スケジュールの始まる時間。
-	{end_date}       | スケジュールの終わる時間。
 	</p>
 </div>
 </body>
