--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<script  src="./assets/script.js?v1.4.1"></script>
 	<script    src="./assets/main.js?v1.4.1"></script>
 	<link   href="./assets/style.css?v1.4.1" rel="stylesheet">
-	<meta name="twitter:card"        content="summary" />
+	<meta name="twitter:card"        content="summary_large_image" />
 	<meta name="twitter:site"        content="@GungeeSpla" />
 	<meta name="twitter:title"       content="サーモンラン配信サムネイルメーカー" />
 	<meta name="twitter:description" content="サーモンランのステージや支給ブキを盛り込んだ配信サムネイルを(そこそこ)簡単に作成・保存できます。" />
-	<meta name="twitter:image"       content="https://gungeespla.github.io/salmon_thumb_maker/assets/img/twitter-card.png" />
+	<meta name="twitter:image"       content="https://gungeespla.github.io/salmon_thumb_maker/assets/img/twitter-card-2.jpg" />
 	<link rel="icon" type="image/png" href="./assets/img/twitter-card.png">
 </head>
 <body>
