--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta name="twitter:site"        content="@GungeeSpla" />
 	<meta name="twitter:title"       content="サーモンラン配信サムネイルメーカー" />
 	<meta name="twitter:description" content="サーモンランのステージや支給ブキを盛り込んだ配信サムネイルを(そこそこ)簡単に作成・保存できます。" />
-	<meta name="twitter:image"       content="https://gungeespla.github.io/salmon_thumb_maker/assets/img/twitter-card-2.jpg" />
+	<meta name="twitter:image"       content="https://gungeespla.github.io/salmon_thumb_maker/assets/img/twitter-card-large.png" />
 	<link rel="icon" type="image/png" href="./assets/img/twitter-card.png">
 </head>
 <body>
