--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
 	<!-- ライブラリここまで -->
-	<script  src="./assets/extend.js?v1.5"></script>
-	<script    src="./assets/word.js?v1.5"></script>
-	<script src="./assets/content.js?v1.5"></script>
-	<script  src="./assets/script.js?v1.5"></script>
-	<script    src="./assets/main.js?v1.5"></script>
-	<link   href="./assets/style.css?v1.5" rel="stylesheet">
+	<script  src="./assets/extend.js?v1.6"></script>
+	<script    src="./assets/word.js?v1.6"></script>
+	<script src="./assets/content.js?v1.6"></script>
+	<script  src="./assets/script.js?v1.6"></script>
+	<script    src="./assets/main.js?v1.6"></script>
+	<link   href="./assets/style.css?v1.6" rel="stylesheet">
 	<meta name="twitter:card"        content="summary_large_image" />
 	<meta name="twitter:site"        content="@GungeeSpla" />
 	<meta name="twitter:title"       content="サーモンラン配信サムネイルメーカー" />
@@ -24,7 +24,7 @@
 	<link rel="icon" type="image/png" href="./assets/img/twitter-card.png">
 </head>
 <body>
-<h1>サーモンラン配信サムネイルメーカー v1.5</h1>
+<h1>サーモンラン配信サムネイルメーカー v1.6</h1>
 <h2>スケジュールの選択</h2>
 <div id="rotation-wrapper">
 	<div style="display: inline-block;">
@@ -148,6 +148,7 @@
 	baseline      | alphabetic | テキストの縦方向の基準点をキーワードで指定します。「top」「middle」「alphabetic」「bottom」でそれぞれ「上端」「中央」「アルファベットのベースライン」「下端」を指定できます。詳しくは&lt;a href="http://www.htmq.com/canvas/textBaseline.shtml" target="_blank">こちら&lt;/a>を見てください。
 	size          | 200        | 文字サイズをpx単位で指定します。
 	family        | Splatoon1  | フォントを指定します。「Splatoon1」「Splatoon2」の他、「sans-serif」でゴシック体、「serif」で明朝体を指定できます。PCにインストールされているフォント名を指定することもできます。使用可能なフォントは&lt;a href="https://wordmark.it/" target="_blank">Wordmark.it&lt;/a>で調べることができます。
+	weight        | normal     | フォントの太さを指定します。「normal」または「bold」を指定してください。
 	color         | black      | 線の色を指定します。
 	stroke_color  | none       | 縁取り線の色を指定します。
 	stroke_width  | 20         | 縁取り線の太さをpx単位で指定します。
