--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	パラメータ名  | 初期値   | 説明
 	x             | 0        | 画像のx座標をpx単位で指定します。
 	y             | 0        | 画像のy座標をpx単位で指定します。
-	id            | 0        | ブキのIDを指定します。ブキのIDは<a href="https://splamp.info/salmon/api/#e" target="_blank">スプランプ</a>さんの「参考：ブキデータ対応表」で調べることができます。また、7000=クマブラ、7010=クマシェル、7020=クマチャー、7030=クマスロ、となっています。
+	id            | 0        | ブキのIDを指定します。ブキのIDは&lt;a href="https://splamp.info/salmon/api/#e" target="_blank">スプランプ&lt;/a>さんの「参考：ブキデータ対応表」で調べることができます。また、その対応表に加え、7000=クマブラ、7010=クマシェル、7020=クマチャー、7030=クマスロを選択することができます。
 	width         | 300      | 各ブキの画像の横幅をpx単位で指定します。
 	color         | none     | 背景の円の塗りつぶしの色を指定します。
 	stroke_color  | none     | 背景の円の線の色を指定します。
