--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
 	<!-- ライブラリここまで -->
-	<script  src="./assets/extend.js?v1.7"></script>
-	<script    src="./assets/word.js?v1.7"></script>
-	<script src="./assets/content.js?v1.7"></script>
-	<script  src="./assets/script.js?v1.7"></script>
-	<script    src="./assets/main.js?v1.7"></script>
-	<link   href="./assets/style.css?v1.7" rel="stylesheet">
+	<script  src="./assets/extend.js?v1.7a"></script>
+	<script    src="./assets/word.js?v1.7a"></script>
+	<script src="./assets/content.js?v1.7a"></script>
+	<script  src="./assets/script.js?v1.7a"></script>
+	<script    src="./assets/main.js?v1.7a"></script>
+	<link   href="./assets/style.css?v1.7a" rel="stylesheet">
 	<meta name="twitter:card"        content="summary_large_image" />
 	<meta name="twitter:site"        content="@GungeeSpla" />
 	<meta name="twitter:title"       content="サーモンラン配信サムネイルメーカー" />
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div id="main">
-<h1>サーモンラン配信サムネイルメーカー v1.7</h1>
+<h1>サーモンラン配信サムネイルメーカー v1.7a</h1>
 <h2>スケジュールの選択</h2>
 <div id="rotation-wrapper">
 	<div style="display: inline-block;">
